# BUILDAUTOMATION26

./: README.md  drizzle.config.ts  index.html  package-lock.json  package.json  proxy.ts
.github/workflows/: ci.yml  deploy.yml
agent/: README.md  pyproject.toml
agent/pipeline/: config.py  contracts.py  state.py
agent/pipeline/nodes/: __init__.py
agent/tests/fixtures/: approval_gate.json  design_complete.json  intake_complete.json
app/api/intake/: route.ts
app/api/intake/[id]/: route.ts
buildautomation/: package.json
src/: auth.ts
src/app/: App.tsx
src/app/components/: FormFileUpload.tsx  FormHeader.tsx  FormInput.tsx  FormMultiSelect.tsx  FormNavigation.tsx  FormProgress.tsx  FormSection.tsx  FormSelect.tsx  FormTextarea.tsx  IntakeForm.tsx  SuccessScreen.tsx
src/app/components/sections/: Section1.tsx  Section2.tsx  Section3.tsx  Section4.tsx  Section5.tsx  Section6.tsx
src/db/: client.ts  index.ts
src/db/migrations/: 0000_foamy_makkari.sql  0000_mixed_absorbing_man.sql  0001_intake_submissions.sql
src/db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
src/db/schema/: assets.ts  auth.ts  cost-logs.ts  deployments.ts  index.ts  intake-jobs.ts  intake-submissions.ts  job-stages.ts  organizations.ts  relations.ts  reviewer-actions.ts  users.ts
src/lib/: submitIntake.ts  supabase.ts
src/lib/validation/: intake.ts
src/types/: next-auth.d.ts
