[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "build-umass-agent"
version = "0.1.0"
description = "LangGraph agent pipeline for BUILD UMass nonprofit consulting platform"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.0",
]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
